<h5>1.15 RC</h5>  [2020/09/15]
<hr>
 - added album list to index page (wdc/goffy)
 
<h5>1.14 Final</h5>  [2020/07/01]
<hr>
 - moved to final (goffy)
 
<h5>1.14 RC2</h5>  [2019/12/23]
<hr>
 - fixed missing check of allowed resolution (goffy)
 - added DirectoryChecker and other new common classes (mamba)
 - code checking and cosmetics (mamba)
 - fixed problems with array to string conversion (goffy)
 - added default permissions for creation of albums (goffy)
 - applied XMF code styling - grouppermHandler (mamba/goffy)
 - use coded name for file name of original image (lupin/goffy)
 - added all exif data as array to image object (lupin/goffy)
 - added notification for comments (lupin/goffy)
 - fixed bug with notification include (lupin/goffy)
 - added notification for comments on image level (lupin/goffy)
 - changed redir after notification update (lupin/goffy)
 - updated italian language (lupin/goffy)
 - fixed bug with deleting images (lupin/goffy)
 - fixed bug in comment notification (lupin/goffy)
 - added new permission to use album collections (lupin/goffy)
 - removed user select of album creator on user side (lupin/goffy)
 - fixed bug in read exif non utf8 (lupin/goffy)
 - fixed perm for album list in image editor (lupin/goffy)
 - fixed perm bug for moving image from one to another album (lupin/goffy)
 - fixed bug in nested sorting (lupin/goffy)
 - fixed bug in extract exif (lupin/goffy)
 - added album name to lc_lightbox (goffy)

<h5>1.14 RC1</h5>  [2019/11/09]
<hr>
 - added possibility to store original image (lupin/goffy)
 - implemented permissions for download full album (goffy)
 - added possibility to download full album (goffy)
 - added cleaning invalid ratings in maintenance (goffy)
 - added default exif lens make and lens model (lupin/goffy)
 - fixed bug in fineimageuploader (goffy)
 - fixed bug in saving album cats (goffy)
 - added cleaning invalid cats in maintenance (goffy)
 - correction of help files (goffy)